# CacheSystem

./: .gitignore  CMakeLists.txt  README.md  run_all_tests.sh
.github/workflows/: ci.yml
docs/: ARCCache.md  ARCCache_new.md  LFUCache.md  LRUCache.md  LRU_only.md
include/: ArcCache.h  Arc_new.h  CachePolicy.h  LfuCache.h  LfuCache.tpp  LruCache.h  LruCache.tpp
src/: ArcCache.tpp  Arc_new.tpp  LfuCache.tpp  LruCache.cpp  LruCache.tpp
test/: test_ArcCache.cpp  test_ArcNew.cpp  test_LfuCache.cpp  test_LruOnly.cpp
